Bugfix: Add 'index2.html' for 7.0.0
This fixes the link to the dictionary from within the desktop app

--- a/7.0.0/index2.html
+++ b/7.0.0/index2.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      NetLogo 7.0.0-beta2 User Manual
+      NetLogo 7.0.0 User Manual
     </title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style>
